hphp/hack/test/typecheck/constraints/bad_contra_constraint_2.php.exp
File "bad_contra_constraint_2.php", line 25, characters 21-34:
Invalid argument (Typing[4110])
  File "bad_contra_constraint_2.php", line 17, characters 52-57:
  Expected `string`
  File "bad_contra_constraint_2.php", line 19, characters 20-24:
  But got `mixed`
  File "collections/interfaces.hhi", line 810, characters 68-69:
    via this generic `Tv`
  File "interfaces.hhi", line 123, characters 99-100:
    via this generic `Tv`
  File "rx/interfaces.hhi", line 35, characters 63-64:
    via this generic `Tv`
